# sp

./: .envrc  .gitignore  LICENSE  README.md  flake.nix  fourmolu.yaml  notes.md  spotify.cabal
.github/workflows/: ci.yaml  update-flake-lock.yaml
lib/: Sp.hs  Spotify.hs
lib/Sp/: AppEnv.hs  CLI.hs  CallbackServer.hs  Errors.hs  Types.hs  UserConfig.hs
lib/Sp/Effect/: Browser.hs  Config.hs  Console.hs  FileSystem.hs  Log.hs  Spotify.hs
lib/Sp/Effect/Spotify/: Servant.hs  TokenResponse.hs
lib/Spotify/: AppEnv.hs  CLI.hs  CallbackServer.hs  Config.hs  Errors.hs  Types.hs  UserConfig.hs
lib/Spotify/Effect/: Browser.hs  CallbackServer.hs  Config.hs  Console.hs  FileSystem.hs  Log.hs  Spotify.hs
lib/Spotify/Effect/Spotify/: Servant.hs  TokenResponse.hs
src/: Main.hs
