cabal-version:      2.4
name:               spotify
version:            0.1.0.0
license:            MIT
copyright:          2022 Joona Piirainen
maintainer:         joona.piirainen@gmail.com
author:             Joona Piirainen
category:           PL
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010

library
  import:          shared
  build-depends:
    , aeson
    , base                   >=4.13.0.0 && <4.18.0.0.0
    , base64-bytestring
    , bytestring
    , dhall
    , effectful
    , effectful-th
    , exceptions
    , http-api-data
    , http-client-tls
    , servant
    , servant-client
    , servant-server
    , wai
    , warp
    , text
    , xdg-basedir-compliant
    , optparse-applicative
    , open-browser
    , mtl

  other-modules:   Paths_spotify
  hs-source-dirs:  lib
  exposed-modules:
    Spotify
    Spotify.AppEnv
    Spotify.CLI
    Spotify.UserConfig
    Spotify.Errors
    Spotify.Types
    Spotify.Effect.Config
    Spotify.Effect.FileSystem
    Spotify.Effect.Spotify
    Spotify.Effect.Spotify.Servant
    Spotify.Effect.Log
    Spotify.Effect.Browser
    Spotify.Effect.CallbackServer

executable spotify
  import:         shared
  build-depends:
    , base       >=4.13.0.0 && <4.18.0.0.0
    , effectful
    , spotify

  hs-source-dirs: src
  main-is:        Main.hs
