cabal-version:      2.4
name:               sp
version:            0.1.0.0
license:            MIT
copyright:          2022 Joona Piirainen
maintainer:         joona.piirainen@gmail.com
author:             Joona Piirainen
category:           PL
extra-source-files:
  LICENSE
  README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  default-language:   Haskell2010

library
  import:          shared
  build-depends:
    , aeson
    , base                   >=4.13.0.0 && <4.18.0.0.0
    , base64-bytestring
    , bytestring
    , dhall
    , directory
    , effectful
    , effectful-th
    , exceptions
    , extra
    , http-api-data
    , http-client-tls
    , http-types
    , mtl
    , open-browser
    , optparse-applicative
    , prettyprinter
    , servant
    , servant-client
    , servant-server
    , text
    , wai
    , warp
    , xdg-basedir-compliant

  other-modules:   Paths_sp
  hs-source-dirs:  lib
  exposed-modules:
    Sp
    Sp.AppEnv
    Sp.CallbackServer
    Sp.CLI
    Sp.Effect.Browser
    Sp.Effect.Config
    Sp.Effect.Console
    Sp.Effect.FileSystem
    Sp.Effect.Log
    Sp.Effect.Spotify
    Sp.Effect.Spotify.Servant
    Sp.Effect.Spotify.TokenResponse
    Sp.Errors
    Sp.Types
    Sp.UserConfig

executable sp
  import:         shared
  build-depends:
    , base       >=4.13.0.0 && <4.18.0.0.0
    , effectful
    , sp

  hs-source-dirs: src
  main-is:        Main.hs
